--- a/.github/actions/hide-plan-comments/action.yml
+++ b/.github/actions/hide-plan-comments/action.yml
@@ -26,7 +26,7 @@ runs:
   using: 'composite'
   steps:
     - name: 'Delete Previous Plan Comments'
-      if: ${{ contains(fromJSON('["delete", "DELETE", "Delete"]'), inputs.strategy) }}
+      if: '${{ contains(fromJSON(''["delete", "DELETE", "Delete"]''), inputs.strategy) }}'
       uses: 'actions/github-script@98814c53be79b1d30f795b907e553d8679345975' # ratchet:actions/github-script@v6
       with:
         github-token: '${{ github.token }}'
@@ -56,7 +56,7 @@ runs:
           );
 
     - name: 'Hide Previous Plan Comments'
-      if: ${{ contains(fromJSON('["hide", "HIDE", "Hide"]'), inputs.strategy) }}
+      if: '${{ contains(fromJSON(''["hide", "HIDE", "Hide"]''), inputs.strategy) }}'
       uses: 'actions/github-script@98814c53be79b1d30f795b907e553d8679345975' # ratchet:actions/github-script@v6
       with:
         github-token: '${{ github.token }}'
