--- a/examples/guardian-admin.yml
+++ b/examples/guardian-admin.yml
@@ -23,7 +23,7 @@ on:
         required: true
       directories:
         description: 'DIRECTORIES - A CSV list of directories execute the Terraform command in. If left blank, the Terraform command will run for all configured directories.'
-        type: string
+        type: 'string'
       terraform_init:
         description: 'TERRAFORM_INIT - Run the Terraform Init command prior to running the admin command.'
         type: 'choice'
@@ -60,7 +60,7 @@ jobs:
           # terraform_directory: './terraform' # specify a terraform folder to search for backend configurations
 
   admin:
-    if: ${{ needs.init.outputs.directories != '[]' }}
+    if: '${{ needs.init.outputs.directories != ''[]'' }}'
     needs:
       - 'init'
     runs-on: 'ubuntu-latest'
