--- a/.github/actions/apply/action.yml
+++ b/.github/actions/apply/action.yml
@@ -56,7 +56,7 @@ runs:
         echo "Unknown error, see logs for details." > $OUT_FILENAME
 
     - name: 'Validate Run Number'
-      if: ${{ github.run_attempt > 1 }}
+      if: '${{ github.run_attempt > 1 }}'
       shell: 'bash'
       working-directory: '${{ inputs.working_directory }}'
       env:
@@ -79,7 +79,7 @@ runs:
         npm install @google-cloud/storage@~6.9.5
 
     - name: 'Validate Event'
-      if: ${{ github.event_name != 'push' }}
+      if: '${{ github.event_name != ''push'' }}'
       shell: 'bash'
       working-directory: '${{ inputs.working_directory }}'
       env:
@@ -171,7 +171,7 @@ runs:
 
     - name: 'Start Comment'
       id: 'comment'
-      if: ${{ steps.has-diff.outputs.result == 'true' }}
+      if: '${{ steps.has-diff.outputs.result == ''true'' }}'
       uses: 'actions/github-script@98814c53be79b1d30f795b907e553d8679345975' # ratchet:actions/github-script@v6
       env:
         WORKING_DIRECTORY: '${{ inputs.working_directory }}'
@@ -190,7 +190,7 @@ runs:
           return prComment.id;
 
     - name: 'Setup Terraform'
-      if: ${{ steps.has-diff.outputs.result == 'true' }}
+      if: '${{ steps.has-diff.outputs.result == ''true'' }}'
       uses: 'abcxyz/secure-setup-terraform@78e3f2fdfb7ebf59ce42141f6dd93bdd65bf04ed' # ratchet:abcxyz/secure-setup-terraform@v0.2.5
       with:
         terraform_version: '${{ inputs.terraform_version }}'
@@ -200,7 +200,7 @@ runs:
         terraform_wrapper: false
 
     - name: 'Terraform Init'
-      if: ${{ steps.has-diff.outputs.result == 'true' }}
+      if: '${{ steps.has-diff.outputs.result == ''true'' }}'
       shell: 'bash'
       working-directory: '${{ inputs.working_directory }}'
       env:
@@ -211,7 +211,7 @@ runs:
         terraform init -input=false -no-color 2>&1 | tee -a $OUT_FILENAME
 
     - name: 'Download Plan File'
-      if: ${{ steps.has-diff.outputs.result == 'true' }}
+      if: '${{ steps.has-diff.outputs.result == ''true'' }}'
       uses: 'actions/github-script@98814c53be79b1d30f795b907e553d8679345975' # ratchet:actions/github-script@v6
       env:
         OUT_FILEPATH: '${{ inputs.working_directory }}/out_${{ github.run_id }}_${{ github.run_attempt }}.txt'
@@ -258,7 +258,7 @@ runs:
           }
 
     - name: 'Terraform Apply'
-      if: ${{ steps.has-diff.outputs.result == 'true' }}
+      if: '${{ steps.has-diff.outputs.result == ''true'' }}'
       shell: 'bash'
       working-directory: '${{ inputs.working_directory }}'
       env:
@@ -270,7 +270,7 @@ runs:
         terraform apply -lock-timeout=$LOCK_TIMEOUT -input=false -no-color tfplan.binary 2>&1 | tee -a $OUT_FILENAME
 
     - name: 'GitHub Format'
-      if: ${{ steps.has-diff.outputs.result == 'true' }}
+      if: '${{ steps.has-diff.outputs.result == ''true'' }}'
       shell: 'bash'
       working-directory: '${{ inputs.working_directory }}'
       env:
@@ -280,7 +280,7 @@ runs:
         sed -i -E 's|^([[:space:]]*)([-+\!])|\2\1|g' $OUT_FILENAME
 
     - name: 'Create Success File'
-      if: ${{ steps.has-diff.outputs.result == 'true' }}
+      if: '${{ steps.has-diff.outputs.result == ''true'' }}'
       shell: 'bash'
       working-directory: '${{ inputs.working_directory }}'
       env:
@@ -294,7 +294,7 @@ runs:
         rm $OUT_FILENAME
 
     - name: 'Delete Plan File'
-      if: ${{ steps.get-pr.outcome == 'success' && always() }}
+      if: '${{ steps.get-pr.outcome == ''success'' && always() }}'
       uses: 'actions/github-script@98814c53be79b1d30f795b907e553d8679345975' # ratchet:actions/github-script@v6
       env:
         OUT_FILEPATH: '${{ inputs.working_directory }}/out_${{ github.run_id }}_${{ github.run_attempt }}.txt'
@@ -341,7 +341,7 @@ runs:
 
     # Precaution to ensure outfile exists to prevent unneccessary i/o errors
     - name: 'Ensure Outfile'
-      if: ${{ failure() }}
+      if: '${{ failure() }}'
       shell: 'bash'
       working-directory: '${{ inputs.working_directory }}'
       env:
@@ -350,7 +350,7 @@ runs:
         touch $OUT_FILENAME
 
     - name: 'Failure Comment'
-      if: ${{ steps.get-pr.outcome == 'success' && failure() }}
+      if: '${{ steps.get-pr.outcome == ''success'' && failure() }}'
       uses: 'actions/github-script@98814c53be79b1d30f795b907e553d8679345975' # ratchet:actions/github-script@v6
       env:
         COMMENT_ID: '${{ steps.comment.outputs.result }}'
@@ -380,7 +380,7 @@ runs:
           });
 
     - name: 'Success Comment'
-      if: ${{ steps.get-pr.outcome == 'success' && steps.has-diff.outputs.result == 'true' && success() }}
+      if: '${{ steps.get-pr.outcome == ''success'' && steps.has-diff.outputs.result == ''true'' && success() }}'
       uses: 'actions/github-script@98814c53be79b1d30f795b907e553d8679345975' # ratchet:actions/github-script@v6
       env:
         COMMENT_ID: '${{ steps.comment.outputs.result }}'
