--- a/.github/actions/iam-drift-detection/action.yml
+++ b/.github/actions/iam-drift-detection/action.yml
@@ -67,14 +67,14 @@ runs:
         echo "diff_file=${TMPFILE_DIFF}" >> $GITHUB_OUTPUT
 
     - uses: 'actions/upload-artifact@0b7f8abb1508181956e8e162db84b466c27e18ce' # ratchet:actions/upload-artifact@v3
-      if: ${{steps.run_diff.outputs.diff_detected == 'TRUE'}}
+      if: '${{steps.run_diff.outputs.diff_detected == ''TRUE''}}'
       with:
         name: 'iam-drift'
         path: '${{ steps.run_diff.outputs.diff_file }}'
 
     - uses: 'actions/github-script@d7906e4ad0b1822421a7e6a35d5ca353c962f410' # ratchet:actions/github-script@v6
       id: 'get_previous_issue'
-      if: ${{steps.run_diff.outputs.diff_detected == 'TRUE'}}
+      if: '${{steps.run_diff.outputs.diff_detected == ''TRUE''}}'
       env:
         ISSUE_LABEL: '${{ inputs.issue_label }}'
       with:
@@ -95,7 +95,7 @@ runs:
 
     - uses: 'actions/github-script@d7906e4ad0b1822421a7e6a35d5ca353c962f410' # ratchet:actions/github-script@v6
       id: 'create_issue'
-      if: ${{steps.run_diff.outputs.diff_detected == 'TRUE'}}
+      if: '${{steps.run_diff.outputs.diff_detected == ''TRUE''}}'
       env:
         ISSUE_LABEL: '${{ inputs.issue_label }}'
         DIFF_FILE: '${{ steps.run_diff.outputs.diff_file }}'
@@ -113,13 +113,13 @@ runs:
           IAM policies.
 
           See the logs for the full details: ${WORKFLOW_RUN_URL}
-          
+
           ${diff_100_lines}
           ${shortened_msg}
-          
+
           Please determine which parts are correct, and submit updated
           terraform config and/or remove the extra policies.
-          
+
           Re-run this manually once complete to verify all diffs are properly resolved.`;
 
           await github.rest.issues.create({
@@ -132,7 +132,7 @@ runs:
 
     - uses: 'actions/github-script@d7906e4ad0b1822421a7e6a35d5ca353c962f410' # ratchet:actions/github-script@v6
       id: 'maybe-close-previous-issue'
-      if: ${{ steps.get_previous_issue.outputs.result != '' && steps.run_diff.outputs.diff_detected == 'TRUE' }}
+      if: '${{ steps.get_previous_issue.outputs.result != '''' && steps.run_diff.outputs.diff_detected == ''TRUE'' }}'
       env:
         PREVIOUS_ISSUE_NUMBER: '${{ steps.get_previous_issue.outputs.result }}'
       with:
