--- a/.github/workflows/test-plan.yml
+++ b/.github/workflows/test-plan.yml
@@ -58,7 +58,7 @@ jobs:
           strategy: 'delete'
 
   plan:
-    if: ${{ needs.init.outputs.directories != '[]' }}
+    if: '${{ needs.init.outputs.directories != ''[]'' }}'
     needs:
       - 'init'
     runs-on: 'ubuntu-latest'
@@ -102,7 +102,7 @@ jobs:
           terraform_version: '1.3.6'
 
   plan_success:
-    if: ${{ always() }}
+    if: '${{ always() }}'
     runs-on: 'ubuntu-latest'
     needs:
       - 'init'
