--- a/examples/guardian-plan.yml
+++ b/examples/guardian-plan.yml
@@ -57,7 +57,7 @@ jobs:
         uses: 'abcxyz/guardian/.github/actions/hide-plan-comments@main' # TODO: pin this to the latest sha in the guardian repo
 
   plan:
-    if: ${{ needs.init.outputs.directories != '[]' }}
+    if: '${{ needs.init.outputs.directories != ''[]'' }}'
     needs:
       - 'init'
     runs-on: 'ubuntu-latest'
@@ -104,7 +104,7 @@ jobs:
           # max_retry_delay: '60'  # default 60s
 
   plan_success:
-    if: ${{ always() }}
+    if: '${{ always() }}'
     runs-on: 'ubuntu-latest'
     needs:
       - 'init'
