feat: add child processing support

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ tmp/
 # terraform plan files
 **/plan.out
 **/tfplan
+**/tfplan.binary
 
 # Ignore override files as they are usually used to override resources locally and so
 # are not checked in
