--- a/.github/actions/iam-drift-detection/action.yml
+++ b/.github/actions/iam-drift-detection/action.yml
@@ -34,14 +34,26 @@ inputs:
     description: 'The label to use on the created github issue. This will be used to discover previously created issues and manage them.'
     default: 'guardian-iam-drift'
     required: false
+  guardian_cli_version:
+    description: 'The version of Guardian CLI.'
+    default: 'latest'
+    required: false
+  go_version:
+    description: 'The version of Golang.'
+    default: '1.20'
+    required: false
 
 runs:
   using: 'composite'
   steps:
-    - uses: 'google-github-actions/setup-gcloud@e30db14379863a8c79331b04a9969f4c1e225e0b' # ratchet:google-github-actions/setup-gcloud@v1
+    - name: 'Setup Go'
+      uses: 'actions/setup-go@6edd4406fa81c3da01a34fa6f6343087c207a568' # ratchet:actions/setup-go@v3
       with:
-        version: '>= 416.0.0'
-        install_components: 'beta'
+        go-version: '${{ inputs.go_version }}'
+
+    - name: 'Install Guardian CLI'
+      shell: 'bash'
+      run: 'go install github.com/abcxyz/guardian/cmd/guardian@${{ inputs.guardian_cli_version }}'
 
     - name: 'Run diff'
       id: 'run_diff'
@@ -51,8 +63,7 @@ runs:
         GCS_BUCKET_LABEL: '${{ inputs.gcs_bucket_label }}'
       run: |
         DRIFTIGNORE_FILE="$(pwd)/.driftignore"
-        cd ./.guardian
-        diff_snippet="$(go run ./cmd/guardian detect-iam-drift -organization-id="$ORGANIZATION_ID" -gcs-bucket-query="$GCS_BUCKET_LABEL" -driftignore-file="$DRIFTIGNORE_FILE")"
+        diff_snippet="$(guardian detect-iam-drift -organization-id="$ORGANIZATION_ID" -gcs-bucket-query="$GCS_BUCKET_LABEL" -driftignore-file="$DRIFTIGNORE_FILE")"
         if [[ "${diff_snippet}" != "" ]]; then
           diff_detected="TRUE"
         else
