--- a/.github/actions/hide-plan-comments/action.yml
+++ b/.github/actions/hide-plan-comments/action.yml
@@ -44,7 +44,7 @@ runs:
               .filter(
                 (comment) =>
                   comment.user.login == "github-actions[bot]" &&
-                  comment.body.match(/^\*\*\`🔱 Guardian 🔱\`\*\*(.*)\*\*\`PLAN\`\*\* /g)
+                  comment.body.match(/^\*\*\`🔱 Guardian 🔱 PLAN\`\*\* -(.*)/g)
               )
               .map(async (comment) => {
                 await github.rest.issues.deleteComment({
