--- a/.github/workflows/test-plan.yml
+++ b/.github/workflows/test-plan.yml
@@ -58,7 +58,7 @@ jobs:
           strategy: 'delete'
 
   plan:
-    if: '${{ needs.init.outputs.directories != ''[]'' }}'
+    if: "${{ needs.init.outputs.directories != '[]' }}"
     needs:
       - 'init'
     runs-on: 'ubuntu-latest'
@@ -71,6 +71,23 @@ jobs:
         uses: 'actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c' # ratchet:actions/checkout@v3
         with:
           ref: '${{ github.event.pull_request.head.ref }}'
+
+      - name: 'Setup Go'
+        uses: 'actions/setup-go@6edd4406fa81c3da01a34fa6f6343087c207a568' # ratchet:actions/setup-go@v3
+        with:
+          go-version: '1.20'
+
+      - name: 'Install Guardian CLI'
+        shell: 'bash'
+        run: 'go install github.com/abcxyz/guardian/cmd/guardian@${{ github.event.pull_request.head.sha }}'
+
+      - name: 'Setup Terraform'
+        uses: 'abcxyz/secure-setup-terraform@78e3f2fdfb7ebf59ce42141f6dd93bdd65bf04ed' # ratchet:abcxyz/secure-setup-terraform@v0.2.5
+        with:
+          terraform_version: '1.3.6'
+          terraform_module_location: './${{ matrix.working_directory }}'
+          terraform_lockfile_location: './${{ matrix.working_directory }}'
+          terraform_wrapper: false
 
       - name: 'Mint Token'
         id: 'mint-token'
@@ -93,13 +110,15 @@ jobs:
           git config --global url."https://guardian-bot:${{ steps.mint-token.outputs.token }}@github.com".insteadOf "https://github.com"
 
       - name: 'Guardian Plan'
-        uses: './.github/actions/plan'
         env:
-          GITHUB_TOKEN: '${{ steps.mint-token.outputs.token }}'
-        with:
-          working_directory: '${{ matrix.working_directory }}'
-          bucket_name: '${{ vars.GUARDIAN_BUCKET_NAME }}'
-          terraform_version: '1.3.6'
+          GITHUB_TOKEN: '${{ github.token }}'
+          WORKING_DIRECTORY: './${{ matrix.working_directory }}'
+          BUCKET_NAME: '${{ vars.GUARDIAN_BUCKET_NAME }}'
+        run: |-
+          guardian plan \
+            --github-token=${GITHUB_TOKEN} \
+            --working-directory=${WORKING_DIRECTORY} \
+            --bucket-name=${BUCKET_NAME}
 
   plan_success:
     if: '${{ always() }}'
