--- a/.github/actions/iam-drift-detection/action.yml
+++ b/.github/actions/iam-drift-detection/action.yml
@@ -34,7 +34,7 @@ inputs:
     description: 'The assignees to use on the created github issue.'
     default: ''
     required: false
-  issue_label:
+  issue_labels:
     description: 'The label to use on the created github issue. This will be used to discover previously created issues and manage them.'
     default: 'guardian-iam-drift'
     required: false
@@ -69,8 +69,12 @@ runs:
         GITHUB_OWNER: '${{ github.repository_owner }}'
         GITHUB_REPO: '${{ github.event.repository.name }}'
         ISSUE_ASSIGNEES: '${{ inputs.issue_assignees }}'
-        ISSUE_LABEL: '${{ inputs.issue_label }}'
+        ISSUE_LABELS: '${{ inputs.issue_labels }}'
       run: |
+        EXTRA_ARGS=()
+        if [[ "$ISSUE_ASSIGNEES" != "" ]]; then
+            EXTRA_ARGS+=(-github-issue-assignees="$ISSUE_ASSIGNEES")
+        fi
         DRIFTIGNORE_FILE="$(pwd)/.driftignore"
         diff_snippet="$(guardian detect-iam-drift \
           -organization-id="$ORGANIZATION_ID" \
@@ -78,9 +82,9 @@ runs:
           -github-token="$GITHUB_TOKEN" \
           -github-owner="$GITHUB_OWNER" \
           -github-repo="$GITHUB_REPO" \
-          -github-issue-assignees="$ISSUE_ASSIGNEES" \
-          -github-issue-labels="$ISSUE_LABEL" \
-          -driftignore-file="$DRIFTIGNORE_FILE")"
+          -github-issue-labels="$ISSUE_LABELS" \
+          -driftignore-file="$DRIFTIGNORE_FILE" \
+          "${EXTRA_ARGS[@]}")"
 
         # We output it so we can link the user to the full diff in the logs.
         echo "$diff_snippet"
