--- a/.github/actions/iam-drift-detection/action.yml
+++ b/.github/actions/iam-drift-detection/action.yml
@@ -34,8 +34,8 @@ inputs:
     description: 'A comma delimited list of assignees to assign the created github issue.'
     default: ''
     required: false
-  issue_mentions:
-    description: 'A comma delimited list of people or teams to mention in created github issue comment.'
+  comment_message_append:
+    description: 'An arbitrary message to append to the created drift GitHub comments.'
     default: ''
     required: false
   issue_labels:
@@ -73,15 +73,12 @@ runs:
         GITHUB_OWNER: '${{ github.repository_owner }}'
         GITHUB_REPO: '${{ github.event.repository.name }}'
         ISSUE_ASSIGNEES: '${{ inputs.issue_assignees }}'
-        ISSUE_MENTIONS: '${{ inputs.issue_mentions }}'
         ISSUE_LABELS: '${{ inputs.issue_labels }}'
+        COMMENT_MESSAGE_APPEND: '${{ inputs.comment_message_append }}'
       run: |
         EXTRA_ARGS=()
         if [[ "$ISSUE_ASSIGNEES" != "" ]]; then
             EXTRA_ARGS+=(-github-issue-assignees="$ISSUE_ASSIGNEES")
-        fi
-        if [[ "$ISSUE_MENTIONS" != "" ]]; then
-            EXTRA_ARGS+=(-github-issue-mentions="$ISSUE_MENTIONS")
         fi
         DRIFTIGNORE_FILE="$(pwd)/.driftignore"
         diff_snippet="$(guardian detect-iam-drift \
@@ -91,6 +88,7 @@ runs:
           -github-owner="$GITHUB_OWNER" \
           -github-repo="$GITHUB_REPO" \
           -github-issue-labels="$ISSUE_LABELS" \
+          -github-comment-message-append="$COMMENT_MESSAGE_APPEND" \
           -driftignore-file="$DRIFTIGNORE_FILE" \
           "${EXTRA_ARGS[@]}")"
 
