--- a/.github/actions/iam-drift-detection/action.yml
+++ b/.github/actions/iam-drift-detection/action.yml
@@ -31,11 +31,15 @@ inputs:
     default: 'labels:terraform'
     required: false
   issue_assignees:
-    description: 'The assignees to use on the created github issue.'
+    description: 'A comma delimited list of assignees to assign the created github issue.'
+    default: ''
+    required: false
+  comment_message_append:
+    description: 'An arbitrary message to append to the created drift GitHub comments.'
     default: ''
     required: false
   issue_labels:
-    description: 'The label to use on the created github issue. This will be used to discover previously created issues and manage them.'
+    description: 'A comma delimited list of labels to use on the created github issue. This will be used to discover previously created issues and manage them.'
     default: 'guardian-iam-drift'
     required: false
   guardian_cli_version:
@@ -70,6 +74,7 @@ runs:
         GITHUB_REPO: '${{ github.event.repository.name }}'
         ISSUE_ASSIGNEES: '${{ inputs.issue_assignees }}'
         ISSUE_LABELS: '${{ inputs.issue_labels }}'
+        COMMENT_MESSAGE_APPEND: '${{ inputs.comment_message_append }}'
       run: |
         EXTRA_ARGS=()
         if [[ "$ISSUE_ASSIGNEES" != "" ]]; then
@@ -83,6 +88,7 @@ runs:
           -github-owner="$GITHUB_OWNER" \
           -github-repo="$GITHUB_REPO" \
           -github-issue-labels="$ISSUE_LABELS" \
+          -github-comment-message-append="$COMMENT_MESSAGE_APPEND" \
           -driftignore-file="$DRIFTIGNORE_FILE" \
           "${EXTRA_ARGS[@]}")"
 
