--- a/.github/workflows/test-plan.yml
+++ b/.github/workflows/test-plan.yml
@@ -33,32 +33,57 @@ permissions:
 concurrency:
   group: '${{ github.workflow }}-${{ github.event.pull_request.number }}-${{ github.head_ref || github.ref }}'
 
+env:
+  REPO_OWNER: '${{ github.repository_owner }}'
+  REPO_NAME: '${{ github.event.repository.name }}'
+  PR_NUMBER: '${{ github.event.number }}'
+  # GUARDIAN_LOG_MODE: 'development'
+  # GUARDIAN_LOG_LEVEL: 'debug'
+
 jobs:
   init:
     runs-on: 'ubuntu-latest'
     outputs:
-      directories: '${{ steps.dirs.outputs.directories }}'
+      directories: '${{ steps.init.outputs.directories }}'
     steps:
       - name: 'Checkout'
         uses: 'actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c' # ratchet:actions/checkout@v3
         with:
           fetch-depth: 0 # get everything so we can use git diff
-          ref: '${{ github.event.pull_request.head.ref }}'
 
-      - name: 'Guardian Directories'
-        id: 'dirs'
-        uses: './.github/actions/directories'
+      - name: 'Setup Go'
+        uses: 'actions/setup-go@6edd4406fa81c3da01a34fa6f6343087c207a568' # ratchet:actions/setup-go@v3
         with:
-          terraform_directory: './terraform'
-          # detect_plan_changes: 'true'
+          go-version: '1.20'
 
-      - name: 'Guardian Remove Previous Plan Comments'
-        uses: './.github/actions/hide-plan-comments'
-        with:
-          strategy: 'delete'
+      - name: 'Install Guardian CLI'
+        shell: 'bash'
+        run: 'go install github.com/abcxyz/guardian/cmd/guardian@${{ github.event.pull_request.head.sha }}'
+
+      - name: 'Guardian Plan Init'
+        id: 'init'
+        env:
+          GITHUB_TOKEN: '${{ github.token }}'
+          TERRAFORM_DIRECTORY: 'terraform'
+          HEAD_REF: 'origin/${{ github.event.pull_request.head.ref }}'
+          BASE_REF: 'origin/${{ github.event.pull_request.base.ref }}'
+        run: |-
+          DIRS=$(guardian plan init \
+            -github-owner="${REPO_OWNER}" \
+            -github-repo="${REPO_NAME}" \
+            -pull-request-number="${PR_NUMBER}" \
+            -source-ref="${HEAD_REF}" \
+            -dest-ref="${BASE_REF}" \
+            -format=json \
+            "${TERRAFORM_DIRECTORY}")
+
+          echo "Guardian Dirs: ${DIRS}"
+
+          echo "directories=${DIRS}" >> $GITHUB_OUTPUT
 
   plan:
-    if: "${{ needs.init.outputs.directories != '[]' }}"
+    if: |
+      needs.init.outputs.directories != '[]'
     needs:
       - 'init'
     runs-on: 'ubuntu-latest'
@@ -85,8 +110,8 @@ jobs:
         uses: 'abcxyz/secure-setup-terraform@78e3f2fdfb7ebf59ce42141f6dd93bdd65bf04ed' # ratchet:abcxyz/secure-setup-terraform@v0.2.5
         with:
           terraform_version: '1.3.6'
-          terraform_module_location: './${{ matrix.working_directory }}'
-          terraform_lockfile_location: './${{ matrix.working_directory }}'
+          terraform_module_location: '${{ matrix.working_directory }}'
+          terraform_lockfile_location: '${{ matrix.working_directory }}'
           terraform_wrapper: false
 
       - name: 'Mint Token'
@@ -112,13 +137,15 @@ jobs:
       - name: 'Guardian Plan'
         env:
           GITHUB_TOKEN: '${{ github.token }}'
-          WORKING_DIRECTORY: './${{ matrix.working_directory }}'
+          WORKING_DIRECTORY: '${{ matrix.working_directory }}'
           BUCKET_NAME: '${{ vars.GUARDIAN_BUCKET_NAME }}'
         run: |-
-          guardian plan \
-            --github-token=${GITHUB_TOKEN} \
-            --working-directory=${WORKING_DIRECTORY} \
-            --bucket-name=${BUCKET_NAME}
+          guardian plan run \
+            -bucket-name="${BUCKET_NAME}" \
+            -github-owner="${REPO_OWNER}" \
+            -github-repo="${REPO_NAME}" \
+            -pull-request-number="${PR_NUMBER}" \
+            "${WORKING_DIRECTORY}"
 
   plan_success:
     if: '${{ always() }}'
