fix: plan run handles non action environments, add skip changes to plan init

--- a/.github/workflows/test-admin.yml
+++ b/.github/workflows/test-admin.yml
@@ -39,7 +39,7 @@ permissions:
 
 # only one admin should run at a time
 concurrency:
-  group: '${{ github.workflow_ref }}'
+  group: '${{ github.workflow }}'
 
 jobs:
   init:
