--- a/.github/workflows/test-apply.yml
+++ b/.github/workflows/test-apply.yml
@@ -26,7 +26,7 @@ permissions:
 
 # only one apply should run at a time
 concurrency:
-  group: '${{ github.workflow_ref }}'
+  group: '${{ github.workflow }}'
 
 jobs:
   init:
